--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -17,8 +17,10 @@
   gap: g.$margin-base;
 
   .contentSection {
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
     padding: g.$margin-base;
     background-color: g.$container;
     box-shadow: g.$shadow-outer;
